--- a/app/assets/stylesheets/parameters.scss
+++ b/app/assets/stylesheets/parameters.scss
@@ -4,10 +4,11 @@ $typeheight: 14px;
 
 $offwhite: #f8f8ff;
 $blue: #7092FF;
-$secondary: #888;
 $lightblue: #B8C5F0;
 $green: #7ebc6f;
+$maroon: #A45A52;
 $vibrant-green: #76c551;
+$vibrant-maroon: #800000;
 $grey: #CCC;
 $lightgrey: #EEE;
 $darkgrey: #888;
@@ -18,3 +19,5 @@ $keyline: 1px solid $lightgrey;
 $border-radius: 3px;
 $list-highlight: #FFFFC0;
 $border: 1px solid $grey;
+$headerHeight: 50px; /* altered 20210729 by luciano */
+$headerBGColor:	#DFDFDF; /* added 20210729 by luciano */
