--- a/app/views/export/embed.html.erb
+++ b/app/views/export/embed.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<%# altered 20210906 by luciano %>
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8">
-    <title>OpenStreetMap Embedded</title>
+    <title>OpenGeofiction Embedded</title>
     <%= stylesheet_link_tag "embed", :media => "screen" %>
     <%= javascript_include_tag "embed" %>
   </head>
