--- a/app/views/site/export.html.erb
+++ b/app/views/site/export.html.erb
@@ -32,6 +32,7 @@
     </div>
   </div>
 
+<!-- commented out BELOW 20210906 by luciano
   <p><%= t ".too_large.advice" %></p>
 
   <dl class="px-3">
@@ -47,4 +48,5 @@
     <dt><a href="https://wiki.openstreetmap.org/wiki/Download"><%= t ".too_large.other.title" %></a></dt>
     <dd><%= t ".too_large.other.description" %></dd>
   </dl>
+-- commented out ABOVE 20210906 by luciano --> 
 <% end %>
