--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -7,7 +7,15 @@
 /* Default rules for the body of every page */
 
 body {
+  font-family: 'Helvetica Neue',Arial,sans-serif;
   font-size: $typeheight;
+  line-height: 1.6666;
+  color: #222;
+  background-color: $headerBGColor; /* modified 20210729 by luciano */
+  margin: 0px;
+  padding: 0px;
+  text-align: left;
+  height: 100%;
 }
 
 p > img {
@@ -147,7 +155,7 @@ header {
 
 nav.primary {
   .btn-outline-primary {
-    @include button-outline-variant($green, $white);
+    @include button-outline-variant($maroon, $white);
   }
 
   .disabled {
@@ -160,7 +168,7 @@ nav.primary {
       }
 
       &:hover {
-        background-color: lighten($green, 30%);
+        background-color: lighten($maroon, 30%);
       }
     }
   }
@@ -168,11 +176,11 @@ nav.primary {
   // Small tweaks to the toggle to stop the primary colour showing through
   // when the menu is shown
   .show > .btn-outline-primary.dropdown-toggle {
-    background-color: $green;
-    border-color: $green;
+    background-color: $maroon;
+    border-color: $maroon;
 
     &:focus {
-      box-shadow: 0 0 0 0.2rem fade-out($green, 0.5);
+      box-shadow: 0 0 0 0.2rem fade-out($maroon, 0.5);
     }
   }
 }
@@ -240,7 +248,7 @@ nav.secondary {
 nav.primary, nav.secondary {
   .dropdown-item {
     &:hover, &:active {
-      background-color: $green;
+      background-color: $maroon;
       color: white;
     }
   }
@@ -264,7 +272,7 @@ body.compact-nav {
 .count-number {
   padding: 2px $lineheight/4;
   border-radius: 2px;
-  background: lighten($green, 30%);
+  background: lighten($maroon, 30%);
   margin: 0 2px;
   font-size: 11px;
   color: #333;
@@ -302,7 +310,7 @@ body.compact-nav {
   }
 
   &.active {
-    background-color: $vibrant-green;
+    background-color: $vibrant-maroon;
   }
 
   .icon {
@@ -540,10 +548,10 @@ body.compact-nav {
         }
       }
 
-      &.active { border-color: darken($green, 10%); }
+      &.active { border-color: darken($maroon, 10%); }
       &:hover {
         border-color: $grey;
-        &.active { border-color: darken($green, 20%); }
+        &.active { border-color: darken($maroon, 20%); }
       }
     }
   }
@@ -649,7 +657,7 @@ body.compact-nav {
   text-align: center;
 }
 
-.donate-attr { color: darken($green, 10%) !important; }
+.donate-attr { color: darken($maroon, 10%) !important; }
 
 /* Rules for the sidebar */
 
@@ -1028,18 +1036,27 @@ tr.turn:hover {
 
 .content-inner {
   position: relative;
-  max-width: 960px;
+  max-width: 900px;
   margin: auto;
   padding: $lineheight;
 }
 
 /* Overrides for pages that use new layout conventions */
 
+.users-new,
+.users-create,
+.users-terms,
+.users-confirm {
+  .content-heading .content-inner {
+    height: 200px;
+  }
+}
+
 .header-illustration {
   background-position: 0 0;
   background-repeat: no-repeat;
-  position: relative;
-  min-height: 200px;
+  position: absolute;
+  height: 200px;
   width: 100%;
   left: 0;
   bottom: 0;
@@ -1059,10 +1076,9 @@ tr.turn:hover {
   &.new-user-arm {
     height: 110px;
     width: 130px;
-    left: 280px;
-    top: 180px;
+    left: 260px;
+    top: 160px;
     background-image: image-url("sign-up-illustration-arm.png");
-    position: absolute;
     z-index: 100;
   }
 }
@@ -1387,6 +1403,25 @@ tr.turn:hover {
 
   &.notice {
     background-color: #CBEEA7;
+  }
+
+  div.message {
+    display: inline-block;
+    margin-left: $lineheight / 2;
+    vertical-align: middle;
+
+    p {
+      margin-top: $lineheight * 0.5;
+      margin-bottom: $lineheight * 0.5;
+
+      &:first-child {
+        margin-top: 0px;
+      }
+
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
   }
 }
 
@@ -1730,30 +1765,68 @@ div.secondary-actions {
   background-size: cover;
   background-attachment: fixed;
 
+
   .content-inner {
-    max-width: 760px;
+    position: relative;
+    color: #333;
+    min-width: 320px;
+    max-width: 640px;
+  }
+
+  .text {
+    background: white;
+    padding: 40px;
   }
 
   .attr {
+    position: relative;
+    padding: 170px 40px 20px;
+    background: #333;
+    background: rgba(0, 0, 0, .8);
+    margin-bottom: 0;
     margin-top: -20px;
 
     h1 {
+      display: block;
+      color: white;
+      font-weight: 300;
+      font-size: 28px;
       span {
-        color: $vibrant-green;
+        color: $vibrant-maroon;
+      }
+    }
+
+    @include media-breakpoint-up(sm) {
+      h1 {
+        font-size: 34px;
       }
     }
 
     .user-image {
+      position: absolute;
+      top: 0px;
+      right: 240px;
+      left: 0px;
       height: 150px;
       background-position: 0 50%;
       background-repeat: no-repeat;
       background-image: image-url('about/osm.png');
       background-size: cover;
-      background-color: $vibrant-green;
+      background-color: $vibrant-maroon;
     }
 
     .byosm {
-      background: $vibrant-green;
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      z-index: 1;
+      width: 240px;
+      height: 150px;
+      padding: 20px 20px 20px 40px;
+      font: 500 20px/24px Helvetica, Arial, sans-serif;
+      white-space: nowrap;
+      color: #fff;
+      background: $vibrant-maroon;
     }
 
     .byosm span {
