--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="closed clearfix">
+<header class="closed">
   <h1>
     <a href="<%= root_path %>" class="geolink">
       <picture>
@@ -36,6 +36,7 @@
   </nav>
   <nav class='secondary'>
     <ul class='mx-1 px-0'>
+<% if false #--- line added 20210729 by luciano, comments out FOLLOWING ---------------------------------------------------  %>
       <% if can? :index, Issue %>
         <li class="compact-hide nav-item <%= current_page_class(issues_path) %>">
           <%= link_to issues_path(:status => "open"), :class => "nav-link" do %>
@@ -47,11 +48,18 @@
       <li class="compact-hide nav-item <%= current_page_class(traces_path) %>">
         <%= link_to t("layouts.gps_traces"), traces_path, :class => "nav-link" %>
       </li>
+<% end #--- line added 20210729 by luciano, comments out ABOVE ---------------------------------------------------  %>
+      <li class="compact-hide nav-item <%= current_page_class(wiki_path) %>">
+        <%= link_to t("layouts.wiki"), wiki_path, :class => "nav-link" %>
+      </li>
       <li class="compact-hide nav-item <%= current_page_class(diary_entries_path) %>">
         <%= link_to t("layouts.user_diaries"), diary_entries_path, :class => "nav-link" %>
       </li>
-      <li class="compact-hide nav-item <%= current_page_class(copyright_path) %>">
-        <%= link_to t("layouts.copyright"), copyright_path, :class => "nav-link" %>
+      <li class="compact-hide nav-item <%= current_page_class(overpass_turbo_path) %>">
+        <%= link_to t("layouts.query_data"), overpass_turbo_path, :class => "nav-link" %>
+      </li>
+      <li class="compact-hide nav-item <%= current_page_class(donate_path) %>">
+        <%= link_to t("layouts.header_donate"), donate_path, :class => "nav-link" %>
       </li>
       <li class="compact-hide nav-item <%= current_page_class(help_path) %>">
         <%= link_to t("layouts.help"), help_path, :class => "nav-link" %>
@@ -62,6 +70,7 @@
       <li id="compact-secondary-nav" class="dropdown nav-item">
         <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#"><%= t "layouts.more" %></a>
         <ul class="dropdown-menu">
+<% if false #--- line added 20210729 by luciano, comments out FOLLOWING ---------------------------------------------------  %>
           <% if Settings.status != "database_offline" && can?(:index, Issue) %>
             <li class="<%= current_page_class(issues_path) %>">
               <%= link_to issues_path(:status => "open"), :class => "dropdown-item" do %>
@@ -71,8 +80,9 @@
             </li>
           <% end %>
           <li class="<%= current_page_class(traces_path) %>"><%= link_to t("layouts.gps_traces"), traces_path, :class => "dropdown-item" %></li>
+ <% end #--- line added 20210729 by luciano, comments out ABOVE ---------------------------------------------------  %>
           <li class="<%= current_page_class(diary_entries_path) %>"><%= link_to t("layouts.user_diaries"), diary_entries_path, :class => "dropdown-item" %></li>
-          <li class="<%= current_page_class(copyright_path) %>"><%= link_to t("layouts.copyright"), copyright_path, :class => "dropdown-item" %></li>
+          <li class="<%= current_page_class(donate_path) %>"><%= link_to t("layouts.header_donate"), donate_path, :class => "dropdown-item" %></li>
           <li class="<%= current_page_class(help_path) %>"><%= link_to t("layouts.help"), help_path, :class => "dropdown-item" %></li>
           <li class="<%= current_page_class(about_path) %>"><%= link_to t("layouts.about"), about_path, :class => "dropdown-item" %></li>
         </ul>
@@ -95,8 +105,7 @@
             <span class='count-number'><%= number_with_delimiter(current_user.new_messages.size) %></span>
           <% end %>
           <%= link_to t("users.show.my profile"), user_path(current_user), :class => "dropdown-item" %>
-          <%= link_to t("users.show.my settings"), user_account_path(current_user), :class => "dropdown-item" %>
-          <%= link_to t("users.show.my_preferences"), preferences_path, :class => "dropdown-item" %>
+          <%= link_to t("users.show.my settings"), { :controller => "users", :action => "account", :display_name => current_user.display_name }, { :class => "dropdown-item" } %>
           <div class="dropdown-divider"></div>
           <%= yield :greeting %>
           <%= link_to t("layouts.logout"), logout_path(:referer => request.fullpath), :method => "post", :class => "geolink dropdown-item" %>
