--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -1,3 +1,4 @@
+<%# altered 20210906 by luciano %>
 <%= favicon_link_tag "favicon.ico" if browser.ie? %>
 <% [57, 60, 72, 76, 114, 120, 144, 152, 180].each do |size| -%>
 <%= favicon_link_tag "apple-touch-icon-#{size}x#{size}.png", :rel => "apple-touch-icon", :sizes => "#{size}x#{size}", :type => "image/png" %>
@@ -17,8 +18,8 @@
 <% if Settings.key?(:publisher_url) -%>
 <%= tag("link", :rel => "publisher", :href => Settings.publisher_url) %>
 <% end -%>
-<%= tag("link", :rel => "search", :type => "application/opensearchdescription+xml", :title => "OpenStreetMap Search", :href => asset_path("osm.xml")) %>
-<%= tag("meta", :name => "description", :content => "OpenStreetMap is the free wiki world map.") %>
+<%= tag("link", :rel => "search", :type => "application/opensearchdescription+xml", :title => "OpenGeofiction Search", :href => asset_path("osm.xml")) %>
+<%= tag("meta", :name => "description", :content => "OpenGeofiction is the free imaginary world map.") %>
 <%= opengraph_tags(@title) %>
 <% if flash[:piwik_goal] -%>
 <%= tag("meta", :name => "piwik-goal", :content => flash[:piwik_goal]) %>
