--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,18 +2,20 @@
   <%= javascript_include_tag "user" %>
 <% end %>
 
-<% content_for :heading_class, "pb-0" %>
 <% content_for :heading do %>
-  <div class='header-illustration new-user-main'>
-    <h1><%= t ".title" %></h1>
-  </div>
+  <h1><%= t ".title" %></h1>
+<!--  commented out BELOW 20210827 by luciano 
+  <div class='header-illustration new-user-main'></div>
   <div class='header-illustration new-user-arm'></div>
+--  commented out ABOVE 20210827 by luciano --> 
 <% end %>
 
 <div class="row">
   <div class='text-muted col-sm order-sm-2'>
+<!--  commented out BELOW 20210827 by luciano
     <h4><%= t ".about.header" %></h4>
     <%= t ".about.html" %>
+--  commented out ABOVE 20210827 by luciano -->
   </div>
 
   <div class="col-sm">
@@ -37,9 +39,11 @@
       <%= f.password_field :pass_crypt, :tabindex => 6 %>
       <%= f.password_field :pass_crypt_confirmation, :tabindex => 7 %>
 
+<!--  commented out BELOW 20210827 by luciano
       <div id="auth_prompt">
         <p><%= link_to t(".use external auth"), "#", :id => "auth_enable" %></p>
       </div>
+--  commented out ABOVE 20210827 by luciano -->
 
       <%= f.primary t(".continue"), :tabindex => 8 %>
     <% end %>
