--- a/app/assets/stylesheets/parameters.scss
+++ b/app/assets/stylesheets/parameters.scss
@@ -7,11 +7,14 @@ $blue: #7092FF;
 $secondary: #888;
 $lightblue: #B8C5F0;
 $green: #7ebc6f;
+$maroon: #A45A52;
 $vibrant-green: #76c551;
+$vibrant-maroon: #800000;
 $grey: #CCC;
 $lightgrey: #EEE;
 $darkgrey: #888;
-$headerHeight: 55px;
+$headerHeight: 50px; /* altered 20210729 by luciano */
+$headerBGColor:	#DFDFDF; /* added 20210729 by luciano */
 $sidebarWidth: 350px;
 $list-highlight: #FFFFC0;
 $border: 1px solid $grey;
