--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,6 +33,7 @@
   </nav>
   <nav class='secondary'>
     <ul class='mx-1 px-0'>
+<% if false #--- line added 20210729 by luciano, comments out FOLLOWING --------------------------------------------------- %>
       <% if Settings.status != "database_offline" && can?(:index, Issue) %>
         <li class="compact-hide nav-item <%= current_page_class(issues_path) %>">
           <%= link_to issues_path(:status => "open"), :class => "nav-link" do %>
@@ -44,6 +45,7 @@
       <li class="compact-hide nav-item <%= current_page_class(traces_path) %>">
         <%= link_to t("layouts.gps_traces"), traces_path, :class => "nav-link" %>
       </li>
+<% end #--- line added 20210729 by luciano, comments out ABOVE --------------------------------------------------- %>
       <li class="compact-hide nav-item <%= current_page_class(diary_entries_path) %>">
         <%= link_to t("layouts.user_diaries"), diary_entries_path, :class => "nav-link" %>
       </li>
@@ -62,6 +64,7 @@
       <li id="compact-secondary-nav" class="dropdown nav-item">
         <button class="dropdown-toggle nav-link btn btn-outline-secondary border-0 bg-white text-secondary" type="button" data-bs-toggle="dropdown"><%= t "layouts.more" %></button>
         <ul class="dropdown-menu">
+<% if false #--- line added 20210729 by luciano, comments out FOLLOWING --------------------------------------------------- %>
           <% if Settings.status != "database_offline" && can?(:index, Issue) %>
             <li class="<%= current_page_class(issues_path) %>">
               <%= link_to issues_path(:status => "open"), :class => "dropdown-item" do %>
@@ -71,8 +74,10 @@
             </li>
           <% end %>
           <li class="<%= current_page_class(traces_path) %>"><%= link_to t("layouts.gps_traces"), traces_path, :class => "dropdown-item" %></li>
+ <% end #--- line added 20210729 by luciano, comments out ABOVE --------------------------------------------------- %>
           <li class="<%= current_page_class(diary_entries_path) %>"><%= link_to t("layouts.user_diaries"), diary_entries_path, :class => "dropdown-item" %></li>
           <li class="<%= current_page_class(communities_path) %>"><%= link_to t("layouts.communities"), communities_path, :class => "dropdown-item" %></li>
+          <li class="<%= current_page_class(donate_path) %>"><%= link_to t("layouts.header_donate"), donate_path, :class => "dropdown-item" %></li>
           <li class="<%= current_page_class(copyright_path) %>"><%= link_to t("layouts.copyright"), copyright_path, :class => "dropdown-item" %></li>
           <li class="<%= current_page_class(help_path) %>"><%= link_to t("layouts.help"), help_path, :class => "dropdown-item" %></li>
           <li class="<%= current_page_class(about_path) %>"><%= link_to t("layouts.about"), about_path, :class => "dropdown-item" %></li>
