--- a/app/views/users/terms.html.erb
+++ b/app/views/users/terms.html.erb
@@ -4,9 +4,12 @@
 
 <% content_for :heading_class, "pb-0" %>
 <% content_for :heading do %>
+  <h1><%= t ".heading" %></h1>
+<!-- commented out BELOW 20210827 by luciano
   <div class='header-illustration new-user-terms'>
     <h1><%= t ".heading" %></h1>
   </div>
+--  commented out ABOVE 20210827 by luciano -->
 <% end %>
 
 <%= form_tag({ :action => "save" }) do %>
@@ -16,6 +19,7 @@
     <%= t ".heading_ct" %>
   </h4>
   <p class="text-muted"><%= t ".contributor_terms_explain" %></p>
+<!-- commented out BELOW 20210827 by luciano
   <label class="form-label">
     <%= t ".legale_select" %>
   </label>
@@ -29,20 +33,22 @@
       </div>
     <% end %>
   </div>
+--  commented out ABOVE 20210827 by luciano -->
 
   <div id="contributorTerms" class="legale border border-grey rounded">
     <%= render :partial => "terms" %>
   </div>
-
+<!-- commented out BELOW 20210827 by luciano
   <div>
     <p id="contributorGuidance" class="text-muted">
       <%= t ".guidance_info_html",
             :readable_summary_link => link_to(t(".readable_summary"),
-                                              "https://www.osmfoundation.org/wiki/License/Contributor_Terms_Summary"),
+                                              "https://wiki.opengeofiction.net/index.php/OpenGeofiction:Contributor_Terms_Summary"),
             :informal_translations_link => link_to(t(".informal_translations"),
-                                                   "https://www.osmfoundation.org/wiki/License/Contributor_Terms/Informal_Translations") %>
+                                                   "https://wiki.opengeofiction.net/index.php/OpenGeofiction:Contributor_Terms_Translations") %>
     </p>
   </div>
+--  commented out ABOVE 20210827 by luciano -->
   <div class="mb-3">
     <div class="form-check">
       <%= check_box_tag "read_ct", "1", false, :class => "form-check-input" %>
@@ -55,7 +61,7 @@
   <h4>
     <%= t "layouts.tou" %>
   </h4>
-  <p class="text-muted"><%= t ".tou_explain_html", :tou_link => link_to(t("layouts.tou"), "https://wiki.osmfoundation.org/wiki/Terms_of_Use", :target => :new) %></p>
+  <p class="text-muted"><%= t ".tou_explain_html", :tou_link => link_to(t("layouts.tou"), "https://wiki.opengeofiction.net/index.php/OpenGeofiction:Terms_of_Use", :target => :new) %></p>
 
   <div class="mb-3">
     <div class="form-check">
@@ -72,7 +78,7 @@
     <%= submit_tag("Continue", :name => "continue", :id => "continue", :disabled => true, :class => "btn btn-primary") %>
     <%= submit_tag("Cancel", :name => "decline", :id => "decline", :class => "btn btn-outline-secondary") %>
   </div>
-
+<!-- commented out BELOW 20210827 by luciano
   <div class="mb-3">
     <div class="form-check">
       <%= check_box("user", "consider_pd", :class => "form-check-input") %>
@@ -81,4 +87,5 @@
     </label>
     <span class="minorNote">(<%= link_to(t(".consider_pd_why"), t(".consider_pd_why_url"), :target => :new) %>)</span>
   </div>
+--  commented out ABOVE 20210827 by luciano -->
 <% end %>
